Fix chart grid overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -638,7 +638,7 @@ p {
 
 @media (min-width: 1100px) {
   .charts-grid.sidebar-open {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   
   .charts-grid.sidebar-open > :nth-child(3) {
